added http-serve dependency and updated readme

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "axios": "^0.16.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "http-server": "^0.10.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server"
   },
   "author": "pritesh bhole",
   "license": "ISC"
